# mySlambook

./: readme.txt
ch10/: .ycm_extra_conf.py
ch10/ceres_examp/: CMakeLists.txt  ceres_bundle.cpp  reproject_error.h
ch10/g2o/: CMakeLists.txt  g2o_bal.h  g2o_bundle.cpp
ch11/: CMakeLists.txt  pose_graph_ceres.cpp  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie.cpp  pose_graph_gtsam.cpp  pose_graph_gtsam_increment.cpp
ch12/: CMakeLists.txt  feature_compare.cpp  feature_training.cpp
ch12/data/: rgb.txt
ch13/: CMakeLists.txt  dense_mapping.cpp
ch13/dense_RGBD/: .ycm_extra_conf.py  CMakeLists.txt  octomap_mapping.cpp  pointcloud_mapping.cpp
ch13/dense_monocular/: CMakeLists.txt  dense_mapping.cpp
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
ch5/jointMap/: CMakeLists.txt  compile_commands.json  joinMap.cpp
ch6/ceres/src/: compile_commands.json
ch6/g2o/src/: CMakeLists.txt  curve_fitting_g2o.cpp
ch6/src/: CMakeLists.txt  ba_demo.cpp  ceres_toturial.cpp  curve_fitting.cpp
ch7/src/: CMakeLists.txt  flann_match.cpp  orb_extraction.cpp  pose_2d2d.cpp  pose_2d3d.cpp  pose_estimation_3d2d.cpp  triangulation.cpp
ch8/src/: CMakeLists.txt  direct.cpp  direct_sparse.cpp
